--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,8 +7,10 @@
     "com.unity.2d.spriteshape": "10.0.3",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "2.0.0",
-    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.ml-agents": "file:F:/unity/ml-agents/com.unity.ml-agents",
+    "com.unity.ml-agents.extensions": "file:F:/unity/ml-agents/com.unity.ml-agents.extensions",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
