fixed I piece bug, added title and buttons.

--- a/results/FirstTetrisTestrun/configuration.yaml
+++ b/results/FirstTetrisTestrun/configuration.yaml
@@ -3,24 +3,26 @@ behaviors:
   Board:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 64
-      buffer_size: 12000
+      batch_size: 1024
+      buffer_size: 10240
       learning_rate: 0.0003
-      beta: 0.001
+      beta: 0.005
       epsilon: 0.2
-      lambd: 0.99
+      lambd: 0.95
       num_epoch: 3
       shared_critic: false
       learning_rate_schedule: linear
-      beta_schedule: linear
+      beta_schedule: constant
       epsilon_schedule: linear
-    checkpoint_interval: 500000
+    checkpoint_interval: 50000
     network_settings:
-      normalize: true
+      normalize: false
       hidden_units: 128
       num_layers: 2
       vis_encode_type: simple
-      memory: null
+      memory:
+        sequence_length: 64
+        memory_size: 256
       goal_conditioning_type: hyper
       deterministic: false
     reward_signals:
@@ -35,14 +37,33 @@ behaviors:
           memory: null
           goal_conditioning_type: hyper
           deterministic: false
+      curiosity:
+        gamma: 0.99
+        strength: 0.02
+        network_settings:
+          normalize: false
+          hidden_units: 256
+          num_layers: 2
+          vis_encode_type: simple
+          memory: null
+          goal_conditioning_type: hyper
+          deterministic: false
+        learning_rate: 0.0003
+        encoding_size: 256
     init_path: null
     keep_checkpoints: 5
     even_checkpoints: false
     max_steps: 500000
-    time_horizon: 1000
-    summary_freq: 12000
+    time_horizon: 64
+    summary_freq: 10000
     threaded: false
-    self_play: null
+    self_play:
+      save_steps: 50000
+      team_change: 100000
+      swap_steps: 2000
+      window: 10
+      play_against_latest_model_ratio: 0.5
+      initial_elo: 1200.0
     behavioral_cloning: null
 env_settings:
   env_path: null
@@ -70,7 +91,7 @@ checkpoint_settings:
   initialize_from: null
   load_model: false
   resume: false
-  force: false
+  force: true
   train_model: false
   inference: false
   results_dir: results
