--- a/results/SlfullTetris_run/configuration.yaml
+++ b/results/SlfullTetris_run/configuration.yaml
@@ -90,8 +90,8 @@ checkpoint_settings:
   run_id: SlfullTetris_run
   initialize_from: null
   load_model: false
-  resume: true
-  force: false
+  resume: false
+  force: true
   train_model: false
   inference: false
   results_dir: results
