--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,14 +2,15 @@
   "dependencies": {
     "com.unity.2d.animation": "10.1.1",
     "com.unity.2d.pixel-perfect": "5.0.3",
-    "com.unity.2d.psdimporter": "9.0.2",
+    "com.unity.2d.psdimporter": "9.0.3",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "10.0.3",
+    "com.unity.2d.spriteshape": "10.0.4",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "2.0.0",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ml-agents": "file:../../ml-agents/com.unity.ml-agents",
     "com.unity.ml-agents.extensions": "file:../../ml-agents/com.unity.ml-agents.extensions",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
