fix: package errors, seed function calls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "unity-tetris-ai-platform.sln"
+    "dotnet.defaultSolution": "unity-tetris-ai-platform.slnx"
 }
