--- a/results/SlfullTetris_run/configuration.yaml
+++ b/results/SlfullTetris_run/configuration.yaml
@@ -3,9 +3,9 @@ behaviors:
   Board:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 1024
-      buffer_size: 10240
-      learning_rate: 0.0003
+      batch_size: 512
+      buffer_size: 50000
+      learning_rate: 0.0001
       beta: 0.005
       epsilon: 0.2
       lambd: 0.95
@@ -53,7 +53,7 @@ behaviors:
     init_path: null
     keep_checkpoints: 5
     even_checkpoints: false
-    max_steps: 500000
+    max_steps: 50000000
     time_horizon: 64
     summary_freq: 10000
     threaded: false
