--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "2.0.6",
     "com.unity.ide.visualstudio": "2.0.25",
+    "com.unity.inputsystem": "1.7.0",
     "com.unity.ml-agents": "file:../../ml-agents/com.unity.ml-agents",
     "com.unity.ml-agents.extensions": "file:../../ml-agents/com.unity.ml-agents.extensions",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
