--- a/config/trainer_config.yaml
+++ b/config/trainer_config.yaml
@@ -1,60 +1,25 @@
 behaviors:
   Board:
-    trainer_type: ppo
-
+    trainer_type: sac
     hyperparameters:
-      # Hyperparameters common to PPO and SAC
+      learning_rate: 0.001
+      learning_rate_schedule: constant
       batch_size: 512
       buffer_size: 50000
-      learning_rate: 1.0e-4
-      learning_rate_schedule: linear
-
-      # PPO-specific hyperparameters
-      beta: 5.0e-3
-      beta_schedule: constant
-      epsilon: 0.2
-      epsilon_schedule: linear
-      lambd: 0.95
-      num_epoch: 3
-      shared_critic: False
-
-    # Configuration of the neural network (common to PPO/SAC)
+      buffer_init_steps: 10000
+      tau: 0.005
+      steps_per_update: 1
+      init_entcoef: 0.1
     network_settings:
-      vis_encode_type: simple
       normalize: false
-      hidden_units: 128
+      hidden_units: 256
       num_layers: 2
-      # memory
-      memory:
-        sequence_length: 64
-        memory_size: 256
-
-    # Trainer configurations common to all trainers
-    max_steps: 5.0e7
-    time_horizon: 64
-    summary_freq: 10000
-    keep_checkpoints: 5
-    checkpoint_interval: 50000
-    threaded: false
-    init_path: null
-
+      vis_encode_type: simple
     reward_signals:
-      # environment reward (default)
       extrinsic:
+        gamma: 0.99
         strength: 1.0
-        gamma: 0.99
-
-      # curiosity module
-      curiosity:
-        strength: 0.02
-        gamma: 0.99
-        encoding_size: 256
-        learning_rate: 3.0e-4
-
-    # self-play
-    self_play:
-      window: 10
-      play_against_latest_model_ratio: 0.5
-      save_steps: 50000
-      swap_steps: 2000
-      team_change: 100000
+    keep_checkpoints: 5
+    max_steps: 1.0e7
+    time_horizon: 128
+    summary_freq: 10000
