--- a/config/trainer_config.yaml
+++ b/config/trainer_config.yaml
@@ -1,25 +1,23 @@
 behaviors:
   Board:
-    trainer_type: sac
+    trainer_type: ppo
     hyperparameters:
-      learning_rate: 0.001
-      learning_rate_schedule: constant
-      batch_size: 512
-      buffer_size: 50000
-      buffer_init_steps: 10000
-      tau: 0.005
-      steps_per_update: 1
-      init_entcoef: 0.1
+      batch_size: 1024
+      buffer_size: 10240
+      learning_rate: 3.0e-4
+      beta: 0.01
+      epsilon: 0.2
+      lambd: 0.95
+      num_epoch: 3
+      learning_rate_schedule: linear
     network_settings:
       normalize: false
       hidden_units: 256
       num_layers: 2
-      vis_encode_type: simple
     reward_signals:
       extrinsic:
-        gamma: 0.99
+        gamma: 0.90
         strength: 1.0
-    keep_checkpoints: 5
-    max_steps: 1.0e7
-    time_horizon: 128
+    max_steps: 10000000
+    time_horizon: 64
     summary_freq: 10000
